Fixed dark mode issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@
   --secondary-color: white;  
   --third-color: black;
   --fourth-color: rgba(0, 0, 0, .3)
+  color-scheme: light only;
 }
 
 .dark-theme{
@@ -23,6 +24,7 @@
   --secondary-color: #2b2b2b;
   --third-color: white;
   --fourth-color: rgba(255, 255, 255, .3)
+  color-scheme: light only;
 }
 
  body {
